# MarocExplore/routes/api.php
@@ -1,9 +1,11 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\FavorisController;
 use App\Http\Controllers\ItineraryController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+
 
 
 
@@ -22,15 +24,20 @@ use Illuminate\Support\Facades\Route;
 //     // return $request->user();
 // });
 Route::post('/register', [AuthController::class, 'register']);
-Route::post('/login', [AuthController::class, 'login']);
-Route::get('/itineraries', [ItineraryController::class, 'index']);
-Route::get('/search', [ItineraryController::class, 'search']);
-Route::get('/filter', [ItineraryController::class, 'filter']);
+Route::post('/login', [AuthController::class, 'login'])->name("login");
 
-Route::middleware('auth:sanctum')->group(function () {
+Route::middleware('auth:api')->group(function () {
+    Route::get('/itineraries', [ItineraryController::class, 'index']);
+
+    Route::get('/search', [ItineraryController::class, 'search']);
+
+    Route::get('/filter', [ItineraryController::class, 'filter']);
+
     Route::post('/store', [ItineraryController::class, 'store']);
+
+    Route::patch('/update/{id}', [ItineraryController::class, 'update']);
+
+    Route::post('/itineraries/{id}/add-to-visited', [FavorisController::class, 'addToVisited']);
+
     Route::post('/logout', [AuthController::class, 'logout']);
-    Route::get('/route', function () {
-        return 'route';
-    });
 });
